<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#550909"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="327dp"
        android:layout_height="216dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/descripcion"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="32dp"
        android:text="@string/grupo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="254dp"
        android:layout_height="83dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="88dp"
        android:text="@string/nombre"
        android:textColor="#FCFFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="164dp"
        android:text="@string/Titulo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="163dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tesoem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tesoem" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="107dp"
        android:layout_height="88dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/edomex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edomex" />

</androidx.constraintlayout.widget.ConstraintLayout>